--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "angularslick",
-  "version": "0.0.0",
+  "name": "kt-angular-slick",
+  "version": "0.1.18",
   "dependencies": {},
   "devDependencies": {
     "grunt": "~0.4.1",
